--- a/電卓.html
+++ b/電卓.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="main.css">
-  <title>電卓</title>
-</head>
-<body>
-  <div class="container">
-    <input /><br>
-    <div class="button">
-      <button onclick="number('7')" >7</button>
-      <button onclick="number('8')" >8</button>
-      <button onclick="number('9')" >9</button>
-      <button onclick="number('+')" >+</button><br>
-      <button onclick="number('4')" >4</button>
-      <button onclick="number('5')" >5</button>
-      <button onclick="number('6')" >6</button>
-      <button onclick="number('-')" >-</button><br>
-      <button onclick="number('1')" >1</button>
-      <button onclick="number('2')" >2</button>
-      <button onclick="number('3')" >3</button>
-      <button onclick="number('*')" >*</button><br>
-      <button onclick="number('0')" >0</button>
-      <button onclick="number('00')" >00</button>
-      <button onclick="number('.')" >.</button>
-      <button onclick="number('/')" >/</button><br>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>電卓</title>
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    <div class = "container">
+      <div id = "output_total" class="output ">0</div>
+      <div id = "output_sub" class="output active">0</div>
+      <div class = "input">
+        <section>
+          <button class = "num_bth one_nine " data-index-id ="7">7</button>
+          <button class = "num_bth one_nine " data-index-id ="8">8</button>
+          <button class = "num_bth one_nine " data-index-id ="9">9</button>
+          <button class = "num_bth cal" data-index-id ="+">+</button>
+        </section>
+        <section>
+          <button class = "num_bth one_nine " data-index-id ="4">4</button>
+          <button class = "num_bth one_nine " data-index-id ="5">5</button>
+          <button class = "num_bth one_nine " data-index-id ="6">6</button>
+          <button class = "num_bth cal" data-index-id ="-">-</button>     
+        </section>
+        <section>
+          <button class = "num_bth one_nine " data-index-id ="1">1</button>
+          <button class = "num_bth  one_nine" data-index-id ="2">2</button>
+          <button class = "num_bth  one_nine" data-index-id ="3">3</button>
+          <button class = "num_bth cal" data-index-id ="*">*</button>
+          </section>
+        <section>
+          <button class = "num_bth" id="zero" data-index-id ="0">0</button>
+          <button class = "num_bth" data-index-id ="00">00</button>
+          <button class = "num_bth" id="point" data-index-id =".">.</button>
+          <button class = "num_bth cal" data-index-id="/">/</button>
+        </section>
+        <section class="button-bottom">
+          <button clss="button-bottom" id = "clear">C</button>
+          <button id = "equal_btn">=</button>
+        </section>
+      </div>
     </div>
-    <div class="button-bottom">
-      <button onclick="update('') " >AC</button>
-      <button onclick="cal()" >=</button>
-    </div>
-</div>
-
-  <script src="main.js"></script>
-</body></html>
+    <script src="main.js"></script>
+  </body>
+</html>
